--- a/package.json
+++ b/package.json
@@ -8,22 +8,65 @@
   },
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=development webpack-dev-server",
-    "build": "NODE_ENV=production webpack --production --config webpack.prod.config.js",
-    "bundle": "NODE_ENV=production webpack --production --config webpack.prod.config.js",
-    "prestart": "npm run bundle",
-    "start": "node server.js",
+    "clean": "rimraf build",
+    "build:webpack": "webpack --config webpack.config.prod.js",
+    "build": "npm run clean && npm run build:webpack",
+    "start": "cross-env NODE_PATH='source' node devServer.js",
+    "debug": "cross-env NODE_PATH='source' echo 'Nothing? `npm install -g iron-node`' && iron-node source/debug.js",
+    "lint": "eslint source",
+    "pretest": "npm run lint",
+    "test": "cross-env NODE_PATH='source' babel-node source/test/index.js",
+    "watch": "watch 'clear && npm run test -s' source",
+    "update": "updtr",
     "deploy": "firebase deploy",
-    "buildDev": "NODE_ENV=development webpack --config webpack.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "profile": "NODE_ENV=production webpack --config webpack.prod.config.js --profile --json > profile.json",
     "grunt": "grunt responsive_images"
   },
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.21.0",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-philpl": "^0.5.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.16.0",
+    "cheerio": "^0.22.0",
+    "clean-webpack-plugin": "^0.1.10",
+    "concurrently": "^3.1.0",
+    "copy-webpack-plugin": "^4.0.1",
+    "cross-env": "^3.1.3",
+    "css-loader": "^0.26.1",
+    "deep-freeze": "0.0.1",
+    "eslint": "^3.12.2",
+    "eslint-plugin-react": "^6.8.0",
+    "exports-loader": "^0.6.3",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "grunt-responsive-images": "^1.10.1",
+    "json-loader": "^0.5.4",
+    "normalize-css": "^2.3.1",
+    "postcss-css-variables": "^0.6.0",
+    "postcss-easy-import": "^1.0.1",
+    "postcss-loader": "^1.2.1",
+    "postcss-media-variables": "^2.0.0",
+    "precss": "^1.4.0",
+    "react-addons-test-utils": "^15.4.1",
+    "redbox-react": "^1.3.3",
+    "rimraf": "^2.5.4",
+    "tape": "^4.6.3",
+    "updtr": "^0.2.3",
+    "watch": "^1.0.1",
+    "webpack": "^1.14.0",
+    "webpack-dev-middleware": "^1.9.0"
+  },
   "dependencies": {
     "express": "^4.14.0",
-    "mapzen.js": "^0.5.3",
+    "mapbox-gl": "^0.29.0",
     "postcss-calc": "^5.3.1",
     "postcss-custom-media": "^5.0.1",
     "react": "^15.3.1",
@@ -33,46 +76,16 @@
     "react-document-meta": "^2.0.3",
     "react-dom": "^15.3.1",
     "react-immutable-proptypes": "^2.1.0",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.8.1",
+    "react-leaflet": "^1.0.2",
+    "react-mapbox-gl": "^0.22.0",
+    "react-redux": "^5.0.1",
+    "react-router": "^3.0.0",
     "react-share": "^1.9.3",
     "redux": "^3.6.0",
     "redux-immutable": "^3.0.8",
     "redux-logger": "^2.6.1",
     "redux-router": "^2.1.2",
     "redux-thunk": "^2.1.0",
-    "tangram": "0.0.1"
-  },
-  "devDependencies": {
-    "autoprefixer": "^6.3.7",
-    "babel-core": "^6.11.4",
-    "babel-loader": "^6.2.4",
-    "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-react-hmre": "^1.1.1",
-    "clean-webpack-plugin": "^0.1.10",
-    "concurrently": "^3.1.0",
-    "copy-webpack-plugin": "^3.0.1",
-    "css-loader": "^0.25.0",
-    "exports-loader": "^0.6.3",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "grunt-responsive-images": "^0.1.9",
-    "html-minifier": "^3.0.2",
-    "html-webpack-plugin": "^2.22.0",
-    "imports-loader": "^0.6.5",
-    "json-loader": "^0.5.4",
-    "normalize-css": "^2.3.1",
-    "postcss-css-variables": "^0.6.0",
-    "postcss-easy-import": "^1.0.1",
-    "postcss-loader": "^0.13.0",
-    "postcss-media-variables": "^2.0.0",
-    "precss": "^1.4.0",
-    "raw-loader": "^0.5.1",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "xml2js": "^0.4.17"
   }
 }
