--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "redux": "^3.6.0",
     "redux-immutable": "^3.0.8",
     "redux-logger": "^2.6.1",
+    "redux-map-gl": "^0.1.0",
     "redux-router": "^2.1.2",
     "redux-thunk": "^2.1.0",
     "xml2js": "^0.4.17"
