--- a/package.json
+++ b/package.json
@@ -68,11 +68,14 @@
   },
   "dependencies": {
     "express": "^4.14.0",
-    "history": "^4.5.1",
+    "history": "^2.1.2",
     "immutable": "^3.8.1",
+    "mapbox-gl": "^0.32.1",
+    "moment": "^2.17.1",
     "postcss-calc": "^5.3.1",
     "postcss-custom-media": "^5.0.1",
     "react": "^15.3.1",
+    "react-autobind": "^1.0.6",
     "react-datetime": "^2.6.0",
     "react-dimensions": "^1.3.0",
     "react-disqus-thread": "^0.4.0",
