--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
     "debug": "cross-env NODE_PATH='source' echo 'Nothing? `npm install -g iron-node`' && iron-node source/debug.js",
     "lint": "eslint source",
     "pretest": "npm run lint",
-    "xest": "cross-env $NODE_DEBUG_OPTION NODE_PATH='source' babel-node source/test/index.js",
-    "test": "cross-env NODE_PATH='source' babel-tape-runner source/test/index.js",
-    "watch": "watch 'clear && npm run test -s' source",
+    "test": "cross-env NODE_PATH='./source' browserify --debug  -t babelify source/test/index.js | tape-run -p 2222",
+    "watch": "watch 'clear && npm run test2 -s' source",
     "update": "updtr",
     "deploy": "firebase deploy",
     "grunt": "grunt responsive_images"
@@ -30,6 +29,7 @@
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.4",
     "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
@@ -37,6 +37,7 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.16.0",
     "babel-tape-runner": "^2.0.1",
+    "babelify": "^7.3.0",
     "cheerio": "^0.22.0",
     "clean-webpack-plugin": "^0.1.10",
     "concurrently": "^3.1.0",
@@ -44,11 +45,13 @@
     "cross-env": "^3.1.3",
     "css-loader": "^0.26.1",
     "deep-freeze": "0.0.1",
+    "envify": "^4.0.0",
     "eslint": "^3.12.2",
     "eslint-plugin-react": "^6.8.0",
     "exports-loader": "^0.6.3",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "faucet": "0.0.1",
     "file-loader": "^0.10.0",
+    "gl": "^4.0.3",
     "grunt-responsive-images": "^1.10.1",
     "json-loader": "^0.5.4",
     "normalize-css": "^2.3.1",
@@ -60,7 +63,10 @@
     "react-addons-test-utils": "^15.4.1",
     "redbox-react": "^1.3.3",
     "rimraf": "^2.5.4",
+    "sinon": "^1.17.7",
+    "source-map-support": "^0.4.11",
     "tape": "^4.6.3",
+    "tape-run": "^2.2.1",
     "updtr": "^0.2.3",
     "watch": "^1.0.1",
     "webpack": "^2.2.1",
@@ -70,6 +76,7 @@
     "express": "^4.14.0",
     "history": "^2.1.2",
     "immutable": "^3.8.1",
+    "jsdom": "^9.11.0",
     "mapbox-gl": "^0.32.1",
     "moment": "^2.17.1",
     "postcss-calc": "^5.3.1",
@@ -82,7 +89,7 @@
     "react-document-meta": "^2.0.3",
     "react-dom": "^15.3.1",
     "react-immutable-proptypes": "^2.1.0",
-    "react-map-gl": "^2.0.1",
+    "react-map-gl": "git+https://github.com/uber/react-map-gl.git",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.2",
     "react-share": "^1.9.3",
