--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "debug": "cross-env NODE_PATH='source' echo 'Nothing? `npm install -g iron-node`' && iron-node source/debug.js",
     "lint": "eslint source",
     "pretest": "npm run lint",
-    "test": "cross-env NODE_PATH='./source' browserify --debug  -t babelify source/test/index.js | tape-run -p 2222",
+    "test": "cross-env NODE_PATH='./source' browserify --debug  -t babelify ./src/**/*-spec.js | tape-run -b chrome -p 2222",
     "watch": "watch 'clear && npm run test2 -s' source",
     "update": "updtr",
     "deploy": "firebase deploy",
@@ -27,6 +27,7 @@
     "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
     "babel-eslint": "^7.1.1",
+    "babel-jest": "^18.0.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -53,6 +54,7 @@
     "file-loader": "^0.10.0",
     "gl": "^4.0.3",
     "grunt-responsive-images": "^1.10.1",
+    "jest": "^18.1.0",
     "json-loader": "^0.5.4",
     "normalize-css": "^2.3.1",
     "postcss-css-variables": "^0.6.0",
