--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "main": "index.js",
   "scripts": {
     "clean": "rimraf build",
-    "build:webpack": "webpack --config webpack.config.prod.js",
+    "build:webpack": "webpack --config config/webpack.config.prod.js",
     "build": "npm run clean && npm run build:webpack",
-    "start": "cross-env NODE_PATH='source' node devServer.js",
+    "start": "cross-env NODE_PATH='source' node scripts/devServer.js",
+    "start-debug": "cross-env NODE_PATH='source' node $NODE_DEBUG_OPTION scripts/devServer.js",
     "debug": "cross-env NODE_PATH='source' echo 'Nothing? `npm install -g iron-node`' && iron-node source/debug.js",
     "lint": "eslint source",
     "pretest": "npm run lint",
@@ -24,6 +25,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^6.7.3",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
     "babel-eslint": "^7.1.1",
@@ -50,6 +52,7 @@
     "eslint": "^3.12.2",
     "eslint-plugin-react": "^6.8.0",
     "exports-loader": "^0.6.3",
+    "extract-text-webpack-plugin": "beta",
     "faucet": "0.0.1",
     "file-loader": "^0.10.0",
     "gl": "^4.0.3",
@@ -57,10 +60,19 @@
     "jest": "^18.1.0",
     "json-loader": "^0.5.4",
     "normalize-css": "^2.3.1",
+    "postcss": "^5.2.14",
+    "postcss-color-function": "^3.0.0",
     "postcss-css-variables": "^0.6.0",
+    "postcss-cssnext": "^2.9.0",
     "postcss-easy-import": "^2.0.0",
-    "postcss-loader": "^1.2.1",
+    "postcss-import": "^9.1.0",
+    "postcss-initial": "^1.5.3",
+    "postcss-loader": "^1.3.0",
+    "postcss-math": "0.0.7",
     "postcss-media-variables": "^2.0.0",
+    "postcss-mixins": "^5.4.1",
+    "postcss-nested": "^1.0.0",
+    "postcss-simple-vars": "^3.0.0",
     "precss": "^1.4.0",
     "react-addons-test-utils": "^15.4.1",
     "redbox-react": "^1.3.3",
@@ -72,11 +84,12 @@
     "updtr": "^0.2.3",
     "watch": "^1.0.1",
     "webpack": "^2.2.1",
-    "webpack-dev-middleware": "^1.9.0"
+    "webpack-dev-middleware": "^1.9.0",
+    "webpack-dev-server": "^2.3.0"
   },
   "dependencies": {
     "express": "^4.14.0",
-    "history": "^2.1.2",
+    "history": "^3.2.1",
     "immutable": "^3.8.1",
     "jsdom": "^9.11.0",
     "mapbox-gl": "^0.32.1",
@@ -91,7 +104,7 @@
     "react-document-meta": "^2.0.3",
     "react-dom": "^15.3.1",
     "react-immutable-proptypes": "^2.1.0",
-    "react-map-gl": "git+https://github.com/uber/react-map-gl.git",
+    "react-map-gl": "^2.0.2",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.2",
     "react-share": "^1.9.3",
