--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
   "main": "index.js",
   "scripts": {
     "clean": "rimraf build",
-    "build:webpack": "webpack --config config/webpack.config.prod.js",
+    "build:webpack": "webpack --config webpack.config.prod.js",
     "build": "npm run clean && npm run build:webpack",
     "start": "cross-env NODE_PATH='source' node scripts/devServer.js",
     "start-debug": "cross-env NODE_PATH='source' node $NODE_DEBUG_OPTION scripts/devServer.js",
     "debug": "cross-env NODE_PATH='source' echo 'Nothing? `npm install -g iron-node`' && iron-node source/debug.js",
     "lint": "eslint source",
     "pretest": "npm run lint",
-    "test": "cross-env NODE_PATH='./source' browserify --debug  -t babelify ./src/**/*-spec.js | tape-run -b chrome -p 2222",
-    "watch": "watch 'clear && npm run test2 -s' source",
+    "test": "cross-env NODE_PATH='source' browserify --debug  -t babelify ./source/**/**/*.spec.js | tape-run -b chrome -p 2222",
+    "watch": "watch 'clear && npm run test -s' source",
     "update": "updtr",
     "deploy": "firebase deploy",
     "grunt": "grunt responsive_images"
