--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "babel-preset-stage-0": "^6.16.0",
     "babel-tape-runner": "^2.0.1",
     "babelify": "^7.3.0",
-    "cheerio": "^0.22.0",
     "clean-webpack-plugin": "^0.1.10",
     "concurrently": "^3.1.0",
     "copy-webpack-plugin": "^4.0.1",
@@ -49,6 +48,7 @@
     "css-loader": "^0.26.1",
     "deep-freeze": "0.0.1",
     "envify": "^4.0.0",
+    "enzyme": "^2.7.1",
     "eslint": "^3.12.2",
     "eslint-plugin-react": "^6.8.0",
     "exports-loader": "^0.6.3",
@@ -74,8 +74,9 @@
     "postcss-nested": "^1.0.0",
     "postcss-simple-vars": "^3.0.0",
     "precss": "^1.4.0",
-    "react-addons-test-utils": "^15.4.1",
+    "react-addons-test-utils": "^15.4.2",
     "redbox-react": "^1.3.3",
+    "redux-mock-store": "^1.2.2",
     "rimraf": "^2.5.4",
     "sinon": "^1.17.7",
     "source-map-support": "^0.4.11",
@@ -88,8 +89,9 @@
     "webpack-dev-server": "^2.3.0"
   },
   "dependencies": {
+    "enzyme": "^2.7.1",
     "express": "^4.14.0",
-    "history": "^3.2.1",
+    "history": "^4.5.1",
     "immutable": "^3.8.1",
     "jsdom": "^9.11.0",
     "mapbox-gl": "^0.32.1",
