--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "gl": "^4.0.3",
     "grunt-responsive-images": "^1.10.1",
     "jest": "^18.1.0",
+    "jest-cli": "^19.0.2",
     "json-loader": "^0.5.4",
     "normalize-css": "^2.3.1",
     "postcss": "^5.2.14",
