--- a/package.json
+++ b/package.json
@@ -16,11 +16,25 @@
     "debug": "cross-env NODE_PATH='source' echo 'Nothing? `npm install -g iron-node`' && iron-node source/debug.js",
     "lint": "eslint source",
     "pretest": "npm run lint",
-    "test": "cross-env NODE_PATH='source' browserify --debug -x react/addons -x react/lib/ExecutionEnvironment -x react/lib/ReactContext -t babelify ./source/**/**/*.spec.js | tape-run -b chrome -p 2222",
+    "test": "cross-env NODE_PATH='source' jest",
+    "test:watch": "cross-env NODE_PATH='source' jest --watch",
+    "test:coverage": "cross-env NODE_PATH='source' jest --coverage",
+    "testX": "cross-env NODE_PATH='source' browserify --debug -x react/addons -x react/lib/ExecutionEnvironment -x react/lib/ReactContext -t babelify ./source/**/**/*.spec.js | tape-run -b chrome -p 2222",
     "watch": "watch 'clear && npm run test -s' source",
     "update": "updtr",
     "deploy": "firebase deploy",
     "grunt": "grunt responsive_images"
+  },
+  "jest": {
+    "setupFiles": [
+      "./jestsetup.js"
+    ],
+    "snapshotSerializers": [
+      "<rootDir>/node_modules/enzyme-to-json/serializer"
+    ],
+    "moduleNameMapper": {
+      "^.+\\.(css|scss)$": "identity-obj-proxy"
+    }
   },
   "author": "",
   "license": "ISC",
@@ -33,6 +47,7 @@
     "babel-loader": "^6.2.4",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
@@ -49,10 +64,11 @@
     "deep-freeze": "0.0.1",
     "envify": "^4.0.0",
     "enzyme": "^2.7.1",
+    "enzyme-to-json": "^1.5.0",
     "eslint": "^3.12.2",
     "eslint-plugin-react": "^6.8.0",
     "exports-loader": "^0.6.3",
-    "extract-text-webpack-plugin": "beta",
+    "extract-text-webpack-plugin": "^2.0.0",
     "faucet": "0.0.1",
     "file-loader": "^0.10.0",
     "gl": "^4.0.3",
@@ -83,6 +99,7 @@
     "source-map-support": "^0.4.11",
     "tape": "^4.6.3",
     "tape-run": "^2.2.1",
+    "typescript": "^2.2.1",
     "updtr": "^0.2.3",
     "watch": "^1.0.1",
     "webpack": "^2.2.1",
