--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,17 @@
 {
-  "presets": ["es2015", "stage-0", "react"],
-  "plugins": [
-    "transform-decorators-legacy",
-    "transform-flow-strip-types"
-  ]
+  "presets": [
+    "es2015"
+  ],
+  "env": {
+    "test": {
+      "presets": [
+        "react",
+        "es2015"
+      ],
+      "plugins": [
+        "transform-object-rest-spread",
+        "transform-flow-strip-types"
+      ]
+    }
+  }
 }
