--- a/package.json
+++ b/package.json
@@ -11,29 +11,28 @@
     "clean": "rimraf build",
     "build:webpack": "webpack --config webpack.config.prod.js",
     "build": "npm run clean && npm run build:webpack",
-    "start": "cross-env NODE_PATH='source' node scripts/devServer.js",
+    "start": "cross-env NODE_PATH='source' node -r babel-register scripts/devServer.js",
     "start-debug": "cross-env NODE_PATH='source' node $NODE_DEBUG_OPTION scripts/devServer.js",
     "debug": "cross-env NODE_PATH='source' echo 'Nothing? `npm install -g iron-node`' && iron-node source/debug.js",
     "lint": "eslint source",
     "pretest": "npm run lint",
-    "test": "cross-env NODE_PATH='source' jest",
+    "browserify": "cross-env NODE_PATH='source' BABEL_ENV=test browserify --debug -x react/addons -x react/lib/ExecutionEnvironment -x react/lib/ReactContext -t babelify ./source/**/**/*.spec.js",
+    "testB": "cross-env NODE_PATH='source' BABEL_ENV=test browserify --debug -x react/addons -x react/lib/ExecutionEnvironment -x react/lib/ReactContext -t babelify ./source/**/**/*.spec.js | NODE_PATH='source' BABEL_ENV=test jest",
+    "test": "cross-env NODE_PATH='source' BABEL_ENV=test jest",
     "test:watch": "cross-env NODE_PATH='source' jest --watch",
     "test:coverage": "cross-env NODE_PATH='source' jest --coverage",
-    "testX": "cross-env NODE_PATH='source' browserify --debug -x react/addons -x react/lib/ExecutionEnvironment -x react/lib/ReactContext -t babelify ./source/**/**/*.spec.js | tape-run -b chrome -p 2222",
+    "testX": "cross-env NODE_PATH='source' BABEL_ENV=test browserify --debug -x react/addons -x react/lib/ExecutionEnvironment -x react/lib/ReactContext -t babelify ./source/**/**/*.spec.js | NODE_PATH='source' BABEL_ENV=test tape-run -b chrome -p 2222",
     "watch": "watch 'clear && npm run test -s' source",
     "update": "updtr",
     "deploy": "firebase deploy",
-    "grunt": "grunt responsive_images"
+    "grunt": "grunt responsive_images",
+    "webpack": "webpack"
   },
   "jest": {
-    "setupFiles": [
-      "./jestsetup.js"
-    ],
-    "snapshotSerializers": [
-      "<rootDir>/node_modules/enzyme-to-json/serializer"
-    ],
     "moduleNameMapper": {
-      "^.+\\.(css|scss)$": "identity-obj-proxy"
+      "mapbox-gl$": "<rootDir>/node_modules/mapbox-gl/dist/mapbox-gl.js",
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "identity-obj-proxy"
     }
   },
   "author": "",
@@ -43,18 +42,19 @@
     "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
     "babel-eslint": "^7.1.1",
-    "babel-jest": "^18.0.0",
+    "babel-jest": "^19.0.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015": "^6.22.0",
     "babel-preset-philpl": "^0.5.0",
-    "babel-preset-react": "^6.11.1",
+    "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.16.0",
-    "babel-tape-runner": "^2.0.1",
+    "babel-register": "^6.23.0",
     "babelify": "^7.3.0",
     "clean-webpack-plugin": "^0.1.10",
     "concurrently": "^3.1.0",
@@ -73,7 +73,7 @@
     "file-loader": "^0.10.0",
     "gl": "^4.0.3",
     "grunt-responsive-images": "^1.10.1",
-    "jest": "^18.1.0",
+    "jest": "^19.0.2",
     "jest-cli": "^19.0.2",
     "json-loader": "^0.5.4",
     "normalize-css": "^2.3.1",
@@ -92,6 +92,7 @@
     "postcss-simple-vars": "^3.0.0",
     "precss": "^1.4.0",
     "react-addons-test-utils": "^15.4.2",
+    "react-test-renderer": "^15.4.2",
     "redbox-react": "^1.3.3",
     "redux-mock-store": "^1.2.2",
     "rimraf": "^2.5.4",
