--- a/.babelrc
+++ b/.babelrc
@@ -1,17 +1,14 @@
 {
+  "sourceMaps": true,
   "presets": [
+    "react",
     "es2015"
   ],
-  "env": {
-    "test": {
-      "presets": [
-        "react",
-        "es2015"
-      ],
-      "plugins": [
-        "transform-object-rest-spread",
-        "transform-flow-strip-types"
-      ]
-    }
-  }
+  "plugins": [
+    "transform-object-rest-spread",
+    "transform-runtime",
+    ["transform-es2015-modules-commonjs-simple", {
+      "noMangle": true
+    }],
+  ]
 }
