--- a/package.json
+++ b/package.json
@@ -29,8 +29,12 @@
     "webpack": "webpack"
   },
   "jest": {
+    "testPathIgnorePatterns": [
+      "__snapshots__"
+    ],
     "moduleNameMapper": {
-      "mapbox-gl$": "<rootDir>/node_modules/mapbox-gl/dist/mapbox-gl.js",
+      "mapbox-gl$": "<rootDir>/node_modules/mapbot-gl/dist/mapbox-gl.js",
+      "webworkify": "<rootDir>/node_moducles/webworkify-webpack",
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|less)$": "identity-obj-proxy"
     }
@@ -44,13 +48,17 @@
     "babel-eslint": "^7.1.1",
     "babel-jest": "^19.0.0",
     "babel-loader": "^6.2.4",
+    "babel-plugin-lodash": "^3.2.11",
+    "babel-plugin-ramda": "^1.1.6",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-es2015-modules-commonjs-simple": "^6.7.4",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.22.0",
+    "babel-preset-es2015-webpack": "^6.4.3",
     "babel-preset-philpl": "^0.5.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.16.0",
@@ -75,6 +83,7 @@
     "grunt-responsive-images": "^1.10.1",
     "jest": "^19.0.2",
     "jest-cli": "^19.0.2",
+    "jsdom": "^9.4.2",
     "json-loader": "^0.5.4",
     "normalize-css": "^2.3.1",
     "postcss": "^5.2.14",
@@ -108,11 +117,9 @@
     "webpack-dev-server": "^2.3.0"
   },
   "dependencies": {
-    "enzyme": "^2.7.1",
     "express": "^4.14.0",
-    "history": "^4.5.1",
+    "history": "^3.2.1",
     "immutable": "^3.8.1",
-    "jsdom": "^9.11.0",
     "mapbox-gl": "^0.32.1",
     "moment": "^2.17.1",
     "postcss-calc": "^5.3.1",
@@ -128,6 +135,7 @@
     "react-map-gl": "^2.0.2",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.2",
+    "react-router-redux": "^4.0.8",
     "react-share": "^1.9.3",
     "redux": "^3.6.0",
     "redux-immutable": "^3.0.8",
