--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "immutable": "^3.8.1",
     "mapbox-gl": "^0.32.1",
     "moment": "^2.17.1",
+    "moment-duration-format": "^1.3.0",
     "postcss-calc": "^5.3.1",
     "postcss-custom-media": "^5.0.1",
     "react": "^15.3.1",
