--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "exports-loader": "^0.6.3",
     "extract-text-webpack-plugin": "^2.0.0",
     "faucet": "0.0.1",
+    "fetch-mock": "^5.9.4",
     "file-loader": "^0.10.0",
     "gl": "^4.0.3",
     "grunt-responsive-images": "^1.10.1",
@@ -85,6 +86,7 @@
     "jest-cli": "^19.0.2",
     "jsdom": "^9.4.2",
     "json-loader": "^0.5.4",
+    "nock": "^9.0.9",
     "normalize-css": "^2.3.1",
     "postcss": "^5.2.14",
     "postcss-color-function": "^3.0.0",
@@ -100,6 +102,7 @@
     "postcss-nested": "^1.0.0",
     "postcss-simple-vars": "^3.0.0",
     "precss": "^1.4.0",
+    "pretty-immutable": "^1.0.1",
     "react-addons-test-utils": "^15.4.2",
     "react-test-renderer": "^15.4.2",
     "redbox-react": "^1.3.3",
@@ -120,6 +123,7 @@
     "express": "^4.14.0",
     "history": "^3.2.1",
     "immutable": "^3.8.1",
+    "isomorphic-fetch": "^2.2.1",
     "mapbox-gl": "^0.32.1",
     "moment": "^2.17.1",
     "moment-duration-format": "^1.3.0",
