Got map dragging working. onChangeViewport wasn't correctly bounded to the dispatch

--- a/source/config.json
+++ b/source/config.json
@@ -1,6 +1,17 @@
 {
   "settings": {
-    "productionDomain": "rescapes.net",
+    "environments": [
+      {
+        "id": "production",
+        "domain": "rescapes.net"
+      }
+    ],
+    "regions": [
+      {
+        "id": "california",
+        "label": "California"
+      }
+    ],
     "current": "california"
   },
   "mapbox": {
