--- a/.babelrc
+++ b/.babelrc
@@ -7,6 +7,7 @@
   "plugins": [
     "transform-object-rest-spread",
     "transform-runtime",
+    "transform-decorators-legacy",
     ["transform-es2015-modules-commonjs-simple", {
       "noMangle": true
     }],
