--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-ramda": "^1.1.6",
     "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-transform-decorators": "^6.22.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-modules-commonjs-simple": "^6.7.4",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
@@ -126,6 +127,7 @@
     "webpack-dev-server": "^2.3.0"
   },
   "dependencies": {
+    "autobind-decorator": "^1.3.4",
     "express": "^4.14.0",
     "history": "^3.2.1",
     "immutable": "^3.8.1",
