--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
     "moment-duration-format": "^1.3.0",
     "postcss-calc": "^5.3.1",
     "postcss-custom-media": "^5.0.1",
+    "query-overpass": "^1.2.0",
     "react": "^15.3.1",
     "react-autobind": "^1.0.6",
     "react-datetime": "^2.6.0",
