--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "moduleNameMapper": {
       "mapbox-gl$": "<rootDir>/node_modules/mapbot-gl/dist/mapbox-gl.js",
       "webworkify": "<rootDir>/node_moducles/webworkify-webpack",
+      "query-overpass$": "<rootDir>/__mocks__/query-overpass.js",
+      "queryOverpassRsponse$": "<rootDir>/__mocks__/queryOverpassResponse.js",
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|less)$": "identity-obj-proxy"
     }
@@ -74,8 +76,8 @@
     "clean-webpack-plugin": "^0.1.10",
     "concurrently": "^3.1.0",
     "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^3.1.3",
-    "css-loader": "^0.26.1",
+    "cross-env": "^4.0.0",
+    "css-loader": "^0.28.0",
     "deep-freeze": "0.0.1",
     "envify": "^4.0.0",
     "enzyme": "^2.7.1",
@@ -86,7 +88,7 @@
     "extract-text-webpack-plugin": "^2.0.0",
     "faucet": "0.0.1",
     "fetch-mock": "^5.9.4",
-    "file-loader": "^0.10.0",
+    "file-loader": "^0.11.1",
     "gl": "^4.0.3",
     "grunt-responsive-images": "^1.10.1",
     "jest": "^19.0.2",
@@ -97,13 +99,13 @@
     "normalize-css": "^2.3.1",
     "postcss": "^5.2.14",
     "postcss-color-function": "^3.0.0",
-    "postcss-css-variables": "^0.6.0",
+    "postcss-css-variables": "^0.7.0",
     "postcss-cssnext": "^2.9.0",
     "postcss-easy-import": "^2.0.0",
     "postcss-import": "^9.1.0",
     "postcss-initial": "^1.5.3",
     "postcss-loader": "^1.3.0",
-    "postcss-math": "0.0.7",
+    "postcss-math": "0.0.8",
     "postcss-media-variables": "^2.0.0",
     "postcss-mixins": "^5.4.1",
     "postcss-nested": "^1.0.0",
@@ -115,12 +117,12 @@
     "redbox-react": "^1.3.3",
     "redux-mock-store": "^1.2.2",
     "rimraf": "^2.5.4",
-    "sinon": "^1.17.7",
+    "sinon": "^2.1.0",
     "source-map-support": "^0.4.11",
     "tape": "^4.6.3",
-    "tape-run": "^2.2.1",
+    "tape-run": "^3.0.0",
     "typescript": "^2.2.1",
-    "updtr": "^0.2.3",
+    "updtr": "^1.0.0",
     "watch": "^1.0.1",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.9.0",
@@ -128,11 +130,12 @@
   },
   "dependencies": {
     "autobind-decorator": "^1.3.4",
+    "deep-equal": "^1.0.1",
     "express": "^4.14.0",
-    "history": "^3.2.1",
+    "history": "^4.6.1",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
-    "mapbox-gl": "^0.32.1",
+    "mapbox-gl": "^0.34.0",
     "moment": "^2.17.1",
     "moment-duration-format": "^1.3.0",
     "postcss-calc": "^5.3.1",
@@ -148,12 +151,12 @@
     "react-immutable-proptypes": "^2.1.0",
     "react-map-gl": "^2.0.2",
     "react-redux": "^5.0.1",
-    "react-router": "^3.0.2",
+    "react-router": "^4.0.0",
     "react-router-redux": "^4.0.8",
     "react-share": "^1.9.3",
     "redux": "^3.6.0",
-    "redux-immutable": "^3.0.8",
-    "redux-logger": "^2.8.2",
+    "redux-immutable": "^4.0.0",
+    "redux-logger": "^3.0.1",
     "redux-map-gl": "^0.1.0",
     "redux-router": "^2.1.2",
     "redux-thunk": "^2.1.0",
