--- a/package.json
+++ b/package.json
@@ -129,9 +129,12 @@
     "webpack-dev-server": "^2.3.0"
   },
   "dependencies": {
+    "@turf/turf": "^4.1.0",
     "autobind-decorator": "^1.3.4",
+    "data.task": "^3.1.1",
     "deep-equal": "^1.0.1",
     "express": "^4.14.0",
+    "futurizer": "^1.0.5",
     "history": "^4.6.1",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
@@ -141,6 +144,7 @@
     "postcss-calc": "^5.3.1",
     "postcss-custom-media": "^5.0.1",
     "query-overpass": "^1.2.0",
+    "ramda-fantasy": "^0.7.0",
     "react": "^15.3.1",
     "react-autobind": "^1.0.6",
     "react-datetime": "^2.6.0",
