--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
   "dependencies": {
     "@turf/turf": "^4.1.0",
     "autobind-decorator": "^1.3.4",
+    "data.maybe": "^1.2.2",
     "data.task": "^3.1.1",
     "deep-equal": "^1.0.1",
     "express": "^4.14.0",
