--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "eslint": "^3.12.2",
     "eslint-plugin-react": "^6.8.0",
     "exports-loader": "^0.6.3",
-    "extract-text-webpack-plugin": "^2.0.0",
+    "extract-text-webpack-plugin": "^2.1.0",
     "faucet": "0.0.1",
     "fetch-mock": "^5.9.4",
     "file-loader": "^0.11.1",
@@ -117,6 +117,7 @@
     "rimraf": "^2.5.4",
     "sinon": "^2.1.0",
     "source-map-support": "^0.4.11",
+    "style-loader": "^0.16.1",
     "tape": "^4.6.3",
     "tape-run": "^3.0.0",
     "typescript": "^2.2.1",
