Struggling to understand how Tasks can work with dispatch

--- a/source/config.json
+++ b/source/config.json
@@ -6,6 +6,9 @@
         "domain": "rescapes.net"
       }
     ],
+    "overpass": {
+      "requestBoundsSize": 5
+    },
     "regions": [
       {
         "id": "california",
