--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "babel-core": "^6.21.0",
     "babel-eslint": "^7.1.1",
     "babel-jest": "^19.0.0",
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^7.0.0",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-ramda": "^1.1.6",
     "babel-plugin-react-transform": "^2.0.2",
@@ -91,7 +91,7 @@
     "grunt-responsive-images": "^1.10.1",
     "jest": "^19.0.2",
     "jest-cli": "^19.0.2",
-    "jsdom": "^9.4.2",
+    "jsdom": "^10.1.0",
     "json-loader": "^0.5.4",
     "nock": "^9.0.9",
     "normalize-css": "^2.3.1",
@@ -117,7 +117,7 @@
     "rimraf": "^2.5.4",
     "sinon": "^2.1.0",
     "source-map-support": "^0.4.11",
-    "style-loader": "^0.16.1",
+    "style-loader": "^0.17.0",
     "tape": "^4.6.3",
     "tape-run": "^3.0.0",
     "typescript": "^2.2.1",
@@ -138,13 +138,14 @@
     "history": "^4.6.1",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
-    "mapbox-gl": "^0.34.0",
+    "mapbox-gl": "^0.37.0",
     "moment": "^2.17.1",
     "moment-duration-format": "^1.3.0",
+    "net": "^1.0.2",
     "postcss-calc": "^5.3.1",
     "postcss-custom-media": "^5.0.1",
     "query-overpass": "^1.2.0",
-    "ramda-fantasy": "^0.7.0",
+    "ramda-fantasy": "^0.8.0",
     "react": "^15.3.1",
     "react-autobind": "^1.0.6",
     "react-datetime": "^2.6.0",
@@ -164,7 +165,9 @@
     "redux-map-gl": "^0.1.0",
     "redux-router": "^2.1.2",
     "redux-thunk": "^2.1.0",
+    "request": "^2.81.0",
     "tape-catch": "^1.0.6",
+    "tls": "0.0.1",
     "xml2js": "^0.4.17"
   }
 }
