Filtered gtfs data by type (in spec for now) so that I can pass ways and nodes to different layers of Mapbox

--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "eslint": "^3.12.2",
     "eslint-plugin-react": "^6.8.0",
     "exports-loader": "^0.6.3",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "extract-text-wabpack-plugin": "^2.1.0",
     "faucet": "0.0.1",
     "fetch-mock": "^5.9.4",
     "file-loader": "^0.11.1",
@@ -145,6 +145,7 @@
     "postcss-calc": "^5.3.1",
     "postcss-custom-media": "^5.0.1",
     "query-overpass": "^1.2.0",
+    "ramda": "^0.23.0",
     "ramda-fantasy": "^0.8.0",
     "react": "^15.3.1",
     "react-autobind": "^1.0.6",
