Trying to get mapbox back in a working state after reinstalling node_modules

--- a/source/config.json
+++ b/source/config.json
@@ -7,7 +7,8 @@
       }
     ],
     "overpass": {
-      "cellSize": 50
+      "cellSize": 100,
+      "sleepBetweenCalls": 1000
     },
     "regions": [
       {
