--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "Reimagine our passenger rail system",
   "engines": {
-    "node": ">=v7.3.0",
-    "npm": ">=4.1.2"
+    "node": ">=v8.0.0",
+    "npm": ">=5.0.1"
   },
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,7 @@
     "build:webpack": "webpack --config webpack.config.prod.js",
     "build": "npm run clean && npm run build:webpack",
     "start": "cross-env NODE_PATH='source' node -r babel-register scripts/devServer.js",
+    "start-webpack": "webpack-dev-server --progress --hot --port 3000 --open",
     "start-debug": "cross-env NODE_PATH='source' node $NODE_DEBUG_OPTION scripts/devServer.js",
     "debug": "cross-env NODE_PATH='source' echo 'Nothing? `npm install -g iron-node`' && iron-node source/debug.js",
     "lint": "eslint source",
@@ -21,7 +22,6 @@
     "test": "cross-env NODE_PATH='source' BABEL_ENV=test jest",
     "test:watch": "cross-env NODE_PATH='source' jest --watch",
     "test:coverage": "cross-env NODE_PATH='source' jest --coverage",
-    "testX": "cross-env NODE_PATH='source' BABEL_ENV=test browserify --debug -x react/addons -x react/lib/ExecutionEnvironment -x react/lib/ReactContext -t babelify ./source/**/**/*.spec.js | NODE_PATH='source' BABEL_ENV=test tape-run -b chrome -p 2222",
     "watch": "watch 'clear && npm run test -s' source",
     "update": "updtr",
     "deploy": "firebase deploy",
@@ -76,16 +76,10 @@
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.0",
     "css-loader": "^0.28.0",
-    "deep-freeze": "0.0.1",
-    "envify": "^4.0.0",
     "enzyme": "^2.7.1",
     "enzyme-to-json": "^1.5.0",
     "eslint": "^3.12.2",
     "eslint-plugin-react": "^7.0.1",
-    "exports-loader": "^0.6.3",
-    "extract-text-wabpack-plugin": "^2.1.0",
-    "faucet": "0.0.1",
-    "fetch-mock": "^5.9.4",
     "file-loader": "^0.11.1",
     "gl": "^4.0.3",
     "grunt-responsive-images": "^1.10.1",
@@ -112,40 +106,36 @@
     "pretty-immutable": "^1.0.1",
     "react-addons-test-utils": "^15.4.2",
     "react-test-renderer": "^15.4.2",
-    "redbox-react": "^1.3.3",
     "redux-mock-store": "^1.2.2",
     "rimraf": "^2.5.4",
     "sinon": "^2.1.0",
     "source-map-support": "^0.4.11",
     "style-loader": "^0.18.1",
-    "tape": "^4.6.3",
-    "tape-run": "^3.0.0",
     "typescript": "^2.2.1",
     "updtr": "^1.0.0",
     "watch": "^1.0.1",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.9.0",
-    "webpack-dev-server": "^2.3.0"
+    "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
     "@turf/turf": "^4.1.0",
     "autobind-decorator": "^1.3.4",
     "data.maybe": "^1.2.2",
     "data.task": "^3.1.1",
-    "deep-equal": "^1.0.1",
     "express": "^4.14.0",
-    "futurizer": "^1.0.5",
+    "extract-text-webpack-plugin": "^2.1.0",
     "history": "^4.6.1",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
     "mapbox-gl": "^0.37.0",
     "moment": "^2.17.1",
     "moment-duration-format": "^1.3.0",
-    "net": "^1.0.2",
     "postcss-calc": "^6.0.0",
     "postcss-custom-media": "^6.0.0",
+    "pouchdb": "^6.2.0",
     "query-overpass": "^1.2.0",
-    "ramda": "^0.23.0",
+    "ramda": "^0.24.1",
     "ramda-fantasy": "^0.8.0",
     "react": "^15.3.1",
     "react-autobind": "^1.0.6",
@@ -167,8 +157,7 @@
     "redux-router": "^2.1.2",
     "redux-thunk": "^2.1.0",
     "request": "^2.81.0",
-    "tape-catch": "^1.0.6",
-    "tls": "0.0.1",
-    "xml2js": "^0.4.17"
+    "rxjs": "^5.4.0",
+    "tls": "0.0.1"
   }
 }
