--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,5 @@
 {
-  "sourceMaps": true,
   "presets": [
-    "react",
-    "es2015"
-  ],
-  "plugins": [
-    "transform-object-rest-spread",
-    "transform-runtime",
-    "transform-decorators-legacy",
-    ["transform-es2015-modules-commonjs-simple", {
-      "noMangle": true
-    }],
+    ["env"]
   ]
 }
