--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:webpack": "webpack --config webpack.config.prod.js",
     "build": "npm run clean && npm run build:webpack",
     "start": "cross-env NODE_PATH='source' node -r babel-register scripts/devServer.js",
-    "start-webpack": "webpack-dev-server --progress --hot --port 3000 --open",
+    "start-webpack": "webpack-dev-server --progress --hot --port 3000",
     "start-debug": "cross-env NODE_PATH='source' node $NODE_DEBUG_OPTION scripts/devServer.js",
     "debug": "cross-env NODE_PATH='source' echo 'Nothing? `npm install -g iron-node`' && iron-node source/debug.js",
     "lint": "eslint source",
@@ -26,7 +26,8 @@
     "update": "updtr",
     "deploy": "firebase deploy",
     "grunt": "grunt responsive_images",
-    "webpack": "webpack"
+    "webpack": "webpack --progress",
+    "webpack-profile": "webpack --profile --json > webpack-stats.json"
   },
   "jest": {
     "setupFiles": [
@@ -48,32 +49,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^7.1.1",
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.21.0",
-    "babel-eslint": "^7.1.1",
-    "babel-jest": "^20.0.3",
+    "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
-    "babel-plugin-lodash": "^3.2.11",
-    "babel-plugin-ramda": "^1.1.6",
-    "babel-plugin-react-transform": "^2.0.2",
-    "babel-plugin-transform-decorators": "^6.22.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-es2015-modules-commonjs-simple": "^6.7.4",
-    "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-es2015-webpack": "^6.4.3",
-    "babel-preset-philpl": "^0.5.0",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "babel-register": "^6.23.0",
-    "babelify": "^7.3.0",
-    "clean-webpack-plugin": "^0.1.10",
-    "concurrently": "^3.1.0",
-    "copy-webpack-plugin": "^4.0.1",
+    "babel-preset-env": "^1.5.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.24.1",
     "cross-env": "^5.0.0",
     "css-loader": "^0.28.0",
     "enzyme": "^2.7.1",
@@ -108,13 +90,14 @@
     "react-test-renderer": "^15.4.2",
     "redux-mock-store": "^1.2.2",
     "rimraf": "^2.5.4",
+    "shebang-loader": "^0.0.1",
     "sinon": "^2.1.0",
     "source-map-support": "^0.4.11",
     "style-loader": "^0.18.1",
     "typescript": "^2.2.1",
     "updtr": "^1.0.0",
     "watch": "^1.0.1",
-    "webpack": "^2.2.1",
+    "webpack": "^2.6.1",
     "webpack-dev-middleware": "^1.9.0",
     "webpack-dev-server": "^2.4.5"
   },
@@ -128,7 +111,6 @@
     "history": "^4.6.1",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
-    "mapbox-gl": "^0.37.0",
     "moment": "^2.17.1",
     "moment-duration-format": "^1.3.0",
     "postcss-calc": "^6.0.0",
@@ -137,7 +119,7 @@
     "query-overpass": "^1.2.0",
     "ramda": "^0.24.1",
     "ramda-fantasy": "^0.8.0",
-    "react": "^15.3.1",
+    "react": "^15.5.4",
     "react-autobind": "^1.0.6",
     "react-datetime": "^2.6.0",
     "react-dimensions": "^1.3.0",
@@ -159,5 +141,12 @@
     "request": "^2.81.0",
     "rxjs": "^5.4.0",
     "tls": "0.0.1"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "stage-2",
+      "react"
+    ]
   }
 }
