--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,4 @@
 {
-  "presets": [
-    ["env"]
-  ]
+  "plugins": ["transform-class-properties", "transform-decorators-legacy", "transform-object-rest-spread"],
+  "presets": ["env", "react"]
 }
