Got Deck markers working

--- a/package.json
+++ b/package.json
@@ -107,11 +107,13 @@
     "babel-polyfill": "^6.23.0",
     "data.maybe": "^1.2.2",
     "data.task": "^3.1.1",
+    "deck.gl": "^4.0.6",
     "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "history": "^4.6.1",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
+    "luma.gl": "^3.0.2",
     "moment": "^2.18.1",
     "moment-duration-format": "^1.3.0",
     "postcss-calc": "^6.0.0",
@@ -123,6 +125,7 @@
     "query-overpass": "^1.5.0",
     "ramda": "^0.24.1",
     "ramda-fantasy": "^0.8.0",
+    "rbush": "^2.0.1",
     "react": "^15.5.4",
     "react-autobind": "^1.0.6",
     "react-datetime": "^2.8.10",
@@ -130,6 +133,7 @@
     "react-disqus-thread": "^0.4.0",
     "react-document-meta": "^2.1.2",
     "react-dom": "^15.5.4",
+    "react-geocoder": "^2.5.0",
     "react-immutable-proptypes": "^2.1.0",
     "react-map-gl": "^2.0.3",
     "react-redux": "^5.0.5",
