Beginning major refactors to reduce code smells. Introducing Reselect and redux-cycles to make things simpler

--- a/package.json
+++ b/package.json
@@ -134,21 +134,21 @@
     "react-disqus-thread": "^0.4.0",
     "react-document-meta": "^2.1.2",
     "react-dom": "^15.5.4",
-    "react-geocoder": "^2.5.0",
     "react-immutable-proptypes": "^2.1.0",
     "react-map-gl": "^2.0.3",
     "react-redux": "^5.0.5",
     "react-router": "3",
     "react-router-redux": "^4.0.8",
     "react-scrollbar": "^0.5.1",
-    "react-share": "^1.14.1",
     "redux": "^3.6.0",
+    "redux-cycles": "^0.4.0",
     "redux-immutable": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-map-gl": "^0.1.0",
     "redux-pouchdb-plus": "^0.8.1",
     "redux-router": "^2.1.2",
     "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
     "rxjs": "^5.4.0",
     "tls": "0.0.1"
   },
