Cleaning up after refactor

--- a/package.json
+++ b/package.json
@@ -60,14 +60,14 @@
     "css-loader": "^0.28.4",
     "enzyme": "^2.8.2",
     "enzyme-to-json": "^1.5.1",
-    "eslint": "^3.19.0",
+    "eslint": "^4.0.0",
     "eslint-plugin-react": "^7.0.1",
     "file-loader": "^0.11.1",
     "gl": "^4.0.3",
     "grunt-responsive-images": "^1.10.1",
     "jest": "^20.0.4",
     "jest-cli": "^20.0.4",
-    "jsdom": "^11.0.0",
+    "jsdom": "~11.0.0",
     "json-loader": "^0.5.4",
     "nock": "^9.0.13",
     "normalize-css": "^2.3.1",
@@ -137,7 +137,7 @@
     "react-immutable-proptypes": "^2.1.0",
     "react-map-gl": "^2.0.3",
     "react-redux": "^5.0.5",
-    "react-router": "3",
+    "react-router": "4",
     "react-router-redux": "^4.0.8",
     "react-scrollbar": "^0.5.1",
     "redux": "^3.6.0",
