Cleaning up components to remove local state. Basically making all components dumb pure functions if possible.

--- a/package.json
+++ b/package.json
@@ -97,9 +97,9 @@
     "source-map-support": "^0.4.15",
     "style-loader": "^0.18.1",
     "typescript": "^2.3.4",
-    "updtr": "^1.0.0",
+    "updtr": "^2.0.0",
     "watch": "^1.0.2",
-    "webpack": "^2.6.1",
+    "webpack": "^3.0.0",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-dev-server": "^2.4.5"
   },
@@ -149,6 +149,7 @@
     "redux-logger": "^3.0.6",
     "redux-map-gl": "^0.1.0",
     "redux-pouchdb-plus": "^0.8.1",
+    "redux-responsive": "^4.3.2",
     "redux-router": "^2.1.2",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
