Set up markersIO cycle function and a test for it. Will try to get it working tomorrow.

--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@turf/turf": "^4.3.1",
     "autobind-decorator": "^1.4.1",
     "babel-polyfill": "^6.23.0",
+    "cycle-pouchdb-most-driver": "^0.0.5",
     "data.maybe": "^1.2.2",
     "data.task": "^3.1.1",
     "deck.gl": "^4.0.6",
@@ -121,6 +122,7 @@
     "react-document-meta": "^2.1.2",
     "react-dom": "^15.5.4",
     "react-immutable-proptypes": "^2.1.0",
+    "react-map-gl": "^2.0.3",
     "react-redux": "^5.0.5",
     "react-router": "4",
     "react-router-dom": "^4.1.1",
