Trying to make sense of splitting an array of records into a stream of PouchDb.puts. Does the resulting stream execute one put per test Time interval?

--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "setupTestFrameworkScriptFile": "<rootDir>/node_modules/jest-sourcemaps/lib/testEnvSetup.js",
     "transform": {
       "\\.jsx?$": "<rootDir>/node_modules/jest-sourcemaps/lib/transformer.js"
-    }
+    },
+    "bail": true
   },
   "author": "",
   "license": "ISC",
