Trying to get unit tests working on this branch without babel

--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "clean": "rimraf build",
     "build:webpack": "webpack --config webpack.config.prod.js",
     "build": "npm run clean && npm run build:webpack",
-    "start": "cross-env NODE_PATH='source' node -r babel-register scripts/devServer.js",
+    "Xtart": "cross-env NODE_PATH='source' node -r babel-register scripts/devServer.js",
+    "start": "nodemon --open --watch webpack.config.js --exec \"webpack-dev-server --env development\"",
     "start-webpack": "webpack-dev-server --progress --hot --port 3000",
     "debug": "cross-env NODE_PATH='source' echo 'Nothing? `npm install -g iron-node`' && iron-node source/debug.js",
     "lint": "eslint source",
     "pretest": "npm run lint",
+    "ktest": "karma start --single-run --browsers Chrome karma.conf.js",
     "test": "cross-env NODE_PATH='source' BABEL_ENV=test jest",
     "test:watch": "cross-env NODE_PATH='source' jest --watch",
     "test:coverage": "cross-env NODE_PATH='source' jest --coverage",
@@ -48,6 +50,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "browserify": "^14.4.0",
+    "chai": "^4.1.1",
     "cross-env": "^5.0.0",
     "css-loader": "^0.28.4",
     "enzyme": "^2.8.2",
@@ -63,7 +67,12 @@
     "jest-environment-node-debug": "^2.0.0",
     "jest-sourcemaps": "^1.0.1",
     "json-loader": "^0.5.4",
-    "most": "^1.5.0",
+    "karma": "^1.7.0",
+    "karma-browserify": "^5.1.1",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-mocha": "^1.3.0",
+    "mocha": "^3.5.0",
     "nock": "^9.0.13",
     "pretty-immutable": "^1.0.1",
     "react-addons-test-utils": "^15.5.1",
@@ -75,9 +84,11 @@
     "source-map-support": "^0.4.15",
     "stream-length": "^1.0.2",
     "style-loader": "^0.18.1",
+    "ts-loader": "^2.3.2",
     "typescript": "^2.3.4",
     "updtr": "^2.0.0",
     "watch": "^1.0.2",
+    "watchify": "^3.9.0",
     "webpack": "^3.0.0",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-dev-server": "^2.4.5"
@@ -102,6 +113,7 @@
     "luma.gl": "^3.0.2",
     "moment": "^2.18.1",
     "moment-duration-format": "^1.3.0",
+    "most": "^1.5.1",
     "pouchdb": "^6.2.0",
     "pouchdb-erase": "^1.0.2",
     "pouchdb-find": "^6.2.0",
@@ -118,7 +130,7 @@
     "react-document-meta": "^2.1.2",
     "react-dom": "^15.5.4",
     "react-immutable-proptypes": "^2.1.0",
-    "react-map-gl": "^2.0.3",
+    "react-map-gl": "^3.0.3",
     "react-redux": "^5.0.5",
     "react-router": "4",
     "react-router-dom": "^4.1.1",
