Slowly getting all tests to pass again

--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "webpack-profile": "webpack --profile --json > webpack-stats.json"
   },
   "jest": {
+    "modulePaths": [
+      "<rootDir>/source"
+    ],
     "setupFiles": [
       "<rootDir>/jestsetup.js"
     ],
