Restructuring configs and adding configHelpers so that I can stabilize the entire app and start testing graphql

--- a/package.json
+++ b/package.json
@@ -8,20 +8,21 @@
   },
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server --progress --colors --hot",
+    "dev-server": "nodemon ./scripts/devServer.js localhost 3100",
+    "dev-client": "webpack-dev-server --port 3000",
     "clean": "rimraf build",
     "build:webpack": "webpack --config webpack.config.prod.js",
     "build": "npm run clean && npm run build:webpack",
-    "start": "webpack-dev-server --progress --hot --port 3000",
-    "debug": "cross-env NODE_PATH='source' echo 'Nothing? `npm install -g iron-node`' && iron-node source/debug.js",
-    "lint": "eslint source --fix",
+    "debug": "cross-env NODE_PATH='src' echo 'Nothing? `npm install -g iron-node`' && iron-node src/debug.js",
+    "lint": "eslint src --fix",
     "pretest": "npm run lint",
-    "test": "cross-env NODE_PATH='source' BABEL_ENV=test jest",
-    "test:watch": "cross-env NODE_PATH='source' jest --watch",
-    "test:coverage": "cross-env NODE_PATH='source' jest --coverage",
-    "watch": "watch 'clear && npm run test -s' source",
+    "test": "cross-env NODE_PATH='src' BABEL_ENV=test jest",
+    "test:watch": "cross-env NODE_PATH='src' jest --watch",
+    "test:coverage": "cross-env NODE_PATH='src' jest --coverage",
+    "watch": "watch 'clear && npm run test -s' src",
     "update": "updtr",
     "deploy": "firebase deploy",
-    "grunt": "grunt responsive_images",
     "webpack": "webpack --progress",
     "webpack-profile": "webpack --profile --json > webpack-stats.json"
   },
@@ -55,12 +56,14 @@
     "eslint": "^4.7.2",
     "eslint-plugin-jest": "^21.2.0",
     "eslint-plugin-react": "7.4.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "gl": "^4.0.4",
     "jest": "^21.2.1",
     "jest-cli": "^21.2.1",
     "json-loader": "^0.5.7",
     "nock": "^9.0.21",
+    "nodemon": "^1.12.1",
     "pretty-immutable": "^1.0.1",
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.0.0",
@@ -87,6 +90,8 @@
     "deck.gl": "^4.1.2",
     "enzyme": "^3.0.0",
     "express": "^4.15.5",
+    "express-graphql": "^0.6.11",
+    "graphql": "^0.11.5",
     "history": "^4.7.2",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
@@ -95,6 +100,8 @@
     "luma.gl": "^4.0.3",
     "moment": "^2.18.1",
     "moment-duration-format": "^1.3.0",
+    "pouchdb": "^6.3.4",
+    "pouchdb-erase": "^1.0.2",
     "prop-types": "^15.6.0",
     "query-overpass": "^1.5.1",
     "ramda": "^0.24.1",
@@ -123,7 +130,7 @@
     "redux-router": "^2.1.2",
     "redux-thunk": "^2.2.0",
     "rescape-cycle": "^1.5.5",
-    "rescape-ramda": "^1.2.0",
+    "rescape-ramda": "^1.2.1",
     "rescape-validate": "^1.2.2",
     "reselect": "^3.0.1",
     "stack-trace": "^0.0.10"
